Fixed issue 17 - horizontal scroll

--- a/stylesheets/intruby.css
+++ b/stylesheets/intruby.css
@@ -85,7 +85,7 @@ code {
 }
 pre {
 	overflow-y: scroll;
-	overflow-x: hidden;
+	overflow-x: scroll;
 	background-color: #eee;
 }
 /*--------------------*\
